hphp/test/zend/bad/Zend/tests/generators/send_after_close.php
<?php

function gen() { var_dump(yield); }

$gen = gen();
$gen->send('foo');
$gen->send('bar');

?>